--- a/kubernetes/overlays/dev/kustomization.yaml
+++ b/kubernetes/overlays/dev/kustomization.yaml
@@ -7,6 +7,7 @@ bases:
   - ../../rosetta
   - ../../rosetta-iiif
   - ../../ciim-ui-dev
+  - ../../cantaloupe
 commonAnnotations:
   environment: dev
 patchesStrategicMerge:
