udated cantaloupe config for more logging

--- a/kubernetes/cantaloupe/properties/cantaloupe.properties
+++ b/kubernetes/cantaloupe/properties/cantaloupe.properties
@@ -10,6 +10,7 @@
 # marked with "!!".
 ###########################################################################
 
+
 ####Media Delegate Properties
 access.level.size=level2;null,level1;800,level0;1600
 default.level=level0
@@ -53,7 +54,7 @@ http.accept_queue_limit =
 # Base URI to use for internal links, such as Link headers and JSON-LD
 # @id values, in a reverse-proxy context. This should only be used when
 # X-Forwarded-* headers cannot be used instead. (See the user manual.)
-base_uri =http://afa13a7c0067b4f01991b0bad9e003a4-edf0e30af2b95f5f.elb.eu-west-2.amazonaws.com/image/
+base_uri = http://afa13a7c0067b4f01991b0bad9e003a4-edf0e30af2b95f5f.elb.eu-west-2.amazonaws.com/image/
 
 # Normally, slashes in a URI path component must be percent-encoded as
 # "%2F". If your proxy is not able to pass these through without decoding,
@@ -88,7 +89,7 @@ meta_identifier.transformer.StandardMetaIdentifierTransformer.delimiter = ;
 # also help diagnose errors that have evaded logging.
 log_error_responses = false
 
-print_stack_trace_on_error_pages = true
+print_stack_trace_on_error_pages = false
 
 ###########################################################################
 # DELEGATE SCRIPT
@@ -113,7 +114,7 @@ delegate_script.pathname = delegates.rb
 endpoint.iiif.1.enabled = false
 
 # Enables the IIIF Image API 2.x endpoint, at /iiif/2.
-endpoint.iiif.2.enabled = true
+endpoint.iiif.2.enabled = false
 
 # Enables the IIIF Image API 3.x endpoint, at /iiif/3.
 endpoint.iiif.3.enabled = true
@@ -159,7 +160,7 @@ source.static = HttpSource
 
 # If true, `source.static` will be overridden, and the `source()` delegate
 # method will be used to select a source per-request.
-source.delegate = true
+source.delegate = false
 
 #----------------------------------------
 # FilesystemSource
@@ -195,7 +196,7 @@ HttpSource.lookup_strategy = ScriptLookupStrategy
 
 # URL that will be prefixed to the identifier in the request URL.
 # Trailing slash is important!
-HttpSource.BasicLookupStrategy.url_prefix =http://aba8bbc248c7248429b60b3fcbfde942-e6a006db0770fe4b.elb.eu-west-2.amazonaws.com/tna/api/secure/ui/media/
+HttpSource.BasicLookupStrategy.url_prefix = http://aba8bbc248c7248429b60b3fcbfde942-e6a006db0770fe4b.elb.eu-west-2.amazonaws.com/tna/api/secure/ui/media/
 
 # Path, extension, query string, etc. that will be suffixed to the
 # identifier in the request URL.
@@ -661,7 +662,7 @@ overlays.BasicStrategy.type = image
 overlays.BasicStrategy.image = /path/to/overlay.png
 
 # Overlay text.
-overlays.BasicStrategy.string = Copyright © My Great Organization\nAll rights reserved.
+overlays.BasicStrategy.string = Copyright Â© My Great Organization\nAll rights reserved.
 
 # For a list of possible values, launch with the -list-fonts argument.
 overlays.BasicStrategy.string.font = Helvetica
@@ -766,7 +767,7 @@ log.error.RollingFileAppender.TimeBasedRollingPolicy.max_history = 30
 # Access Log
 #----------------------------------------
 
-log.access.ConsoleAppender.enabled = false
+log.access.ConsoleAppender.enabled = true
 
 # N.B.: Don't enable FileAppender and RollingFileAppender simultaneously!
 log.access.FileAppender.enabled = false
