udated cantaloupe config for more logging

--- a/kubernetes/cantaloupe/properties/cantaloupe.properties
+++ b/kubernetes/cantaloupe/properties/cantaloupe.properties
@@ -184,7 +184,7 @@ FilesystemSource.BasicLookupStrategy.path_suffix =
 #----------------------------------------
 
 # Trusts insecure certificates and cipher suites.
-HttpSource.allow_insecure = false
+HttpSource.allow_insecure = true
 
 # Request timeout in seconds.
 HttpSource.request_timeout =
