updated config for proteus updated

--- a/kubernetes/rosetta/config/application.yml
+++ b/kubernetes/rosetta/config/application.yml
@@ -42,7 +42,7 @@ rosetta:
         type: proteus
         properties:
           mutable: true
-          file: ./config/jpt.json
+          spec: ./config/jpt.json
           input: source
           output: detail
           include:
