added info path as universal viewer was adding /info.json

--- a/kubernetes/rosetta-iiif/config/iiif-mapping.json
+++ b/kubernetes/rosetta-iiif/config/iiif-mapping.json
@@ -35,7 +35,11 @@
               "name": "zoom",
               "location": "[R]$.@processed.original.location",
               "height": "[R]$.@processed.original.measurements.dimensions[?(@.dimension == 'height')].value",
-              "width": "[R]$.@processed.original.measurements.dimensions[?(@.dimension == 'width')].value"
+              "width": "[R]$.@processed.original.measurements.dimensions[?(@.dimension == 'width')].value",
+              "info_path": {
+                "#type": "literal",
+                "value": "/{location}"
+              }
             }
           }
         }
