added ciim domain

--- a/kubernetes/rosetta/kustomization.yml
+++ b/kubernetes/rosetta/kustomization.yml
@@ -4,6 +4,8 @@ resources:
   - ingress.yml
   - es_ingress.yml
   - cantaloupe_ingress.yml
+  - cantaloupe_ciim_ingress.yml
+  - ingress_ciim.yml
 configMapGenerator:
   - name: rosetta-config
     files:
