--- a/kubernetes/rosetta/cantaloupe_ciim_ingress.yml
+++ b/kubernetes/rosetta/cantaloupe_ciim_ingress.yml
@@ -1,7 +1,7 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: tna-ingress-cantaloupe
+  name: tna-ingress-cantaloupe-ciim
   namespace: etna
   annotations:
     konghq.com/strip-path: "true"
