--- a/kubernetes/rosetta/ingress_ciim.yml
+++ b/kubernetes/rosetta/ingress_ciim.yml
@@ -8,6 +8,9 @@ metadata:
     nginx.ingress.kubernetes.io/use-regex: "true"
     nginx.ingress.kubernetes.io/rewrite-target: /api/v1/$1
 spec:
+  tls:
+    - hosts:
+        - tna.ciim.k-int.com
   rules:
     - host: tna.ciim.k-int.com
       http:
