--- a/kubernetes/rosetta/ingress_ciim.yml
+++ b/kubernetes/rosetta/ingress_ciim.yml
@@ -14,6 +14,7 @@ spec:
   rules:
     - host: tna.ciim.k-int.com
       http:
+        paths:
           - path: /iiif/
             pathType: Prefix
             backend:
