added ciim domain

--- a/kubernetes/rosetta/ingress.yml
+++ b/kubernetes/rosetta/ingress.yml
@@ -53,6 +53,13 @@ spec:
                 name: rosetta-service
                 port:
                   name: rosetta-port
+          - path: /iiif/
+            pathType: Prefix
+            backend:
+              service:
+                name: rosettav2-service
+                port:
+                  name: rosettav2-port
           - path: /ciim/
             pathType: Prefix
             backend:
