added ciim domain

--- a/kubernetes/overlays/dev/kustomization.yaml
+++ b/kubernetes/overlays/dev/kustomization.yaml
@@ -8,6 +8,7 @@ bases:
   - ../../rosetta-iiif
   - ../../ciim-ui-dev
   - ../../cantaloupe
+  - ../../acme
 commonAnnotations:
   environment: dev
 patchesStrategicMerge:
