--- a/kubernetes/acme/acme_ingress.yml
+++ b/kubernetes/acme/acme_ingress.yml
@@ -6,8 +6,12 @@ metadata:
   annotations:
     konghq.com/protocols: "http"
 spec:
+  tls:
+    - hosts:
+        - tna.ciim.k-int.com
   rules:
-    - http:
+    - host: tna.ciim.k-int.com
+      http:
         paths:
           - path: /.well-known/acme-challenge
             pathType: Prefix
