--- a/kubernetes/acme/acme_ingress.yml
+++ b/kubernetes/acme/acme_ingress.yml
@@ -4,6 +4,7 @@ metadata:
   name: kc-ingress-acme
   namespace: etna
   annotations:
+    kubernetes.io/ingress.class: kong
     konghq.com/protocols: "http"
 spec:
   tls:
