updated urls to https

--- a/kubernetes/cantaloupe/properties/cantaloupe.properties
+++ b/kubernetes/cantaloupe/properties/cantaloupe.properties
@@ -54,7 +54,7 @@ http.accept_queue_limit =
 # Base URI to use for internal links, such as Link headers and JSON-LD
 # @id values, in a reverse-proxy context. This should only be used when
 # X-Forwarded-* headers cannot be used instead. (See the user manual.)
-base_uri = http://aba8bbc248c7248429b60b3fcbfde942-e6a006db0770fe4b.elb.eu-west-2.amazonaws.com/image/
+base_uri = https://tna.ciim.k-int.com/image/
 
 # Normally, slashes in a URI path component must be percent-encoded as
 # "%2F". If your proxy is not able to pass these through without decoding,
