--- a/kubernetes/rosetta-iiif/config/iiif-mapping.json
+++ b/kubernetes/rosetta-iiif/config/iiif-mapping.json
@@ -41,6 +41,17 @@
                 "value": "/{location}"
               }
             }
+          },
+          "value": {
+            "thumbnail": [
+              {
+                "id": "[R]$.@processed.original.location",
+                "type": "Image",
+                "format": "image/jpeg",
+                "height": "[R]$.@processed.original.measurements.dimensions[?(@.dimension == 'height')].value",
+                "width": "[R]$.@processed.original.measurements.dimensions[?(@.dimension == 'width')].value"
+              }
+            ]
           }
         }
       }
