exposed transform endpoint

--- a/kubernetes/rosetta/ingress_ciim.yml
+++ b/kubernetes/rosetta/ingress_ciim.yml
@@ -23,3 +23,10 @@ spec:
                 name: rosettav2-service
                 port:
                   name: rosettav2-port
+          - path: /transform/
+            pathType: Prefix
+            backend:
+              service:
+                name: rosettav2-service
+                port:
+                  name: rosettav2-port
