--- a/kubernetes/rosetta-iiif/kustomization.yml
+++ b/kubernetes/rosetta-iiif/kustomization.yml
@@ -8,3 +8,4 @@ configMapGenerator:
       - ./config/jpt.json
       - ./config/iiif-mapping.json
       - ./config/component_search.json
+      - /config/iiif_include.json
