--- a/kubernetes/rosetta-iiif/config/iiif-mapping.json
+++ b/kubernetes/rosetta-iiif/config/iiif-mapping.json
@@ -42,16 +42,13 @@
               }
             }
           },
-          "value": {
-            "type": "sparse_canvas",
-            "artifact": {
-              "name": "thumbnail",
-              "location": "[R]$.@processed.preview.location",
-              "height": "[R]$.@processed.preview.measurements.dimensions[?(@.dimension == 'height')].value",
-              "width": "[R]$.@processed.preview.measurements.dimensions[?(@.dimension == 'width')].value",
-              "info_path": {
-                "#type": "literal",
-                "value": "/{location}"
+          "thumbnail": {
+            "#type": "require_catch",
+            "value": {
+              "#type": "scope",
+              "scope": "[R]$.processed",
+              "value": {
+                "#type": "thumbnail"
               }
             }
           }
