--- a/kubernetes/rosetta/ingress_ciim.yml
+++ b/kubernetes/rosetta/ingress_ciim.yml
@@ -16,6 +16,48 @@ spec:
     - host: tna.ciim.k-int.com
       http:
         paths:
+          - path: /api/v1/data/(.*)
+            pathType: Prefix
+            backend:
+              service:
+                name: rosetta-service
+                port:
+                  name: rosetta-port
+          - path: /tna/api/
+            pathType: Prefix
+            backend:
+              service:
+                name: ciim-service
+                port:
+                  name: api-port
+          - path: /api/v1/
+            pathType: Prefix
+            backend:
+              service:
+                name: rosetta-service
+                port:
+                  name: rosetta-port
+          - path: /swagger-ui/index.html
+            pathType: Prefix
+            backend:
+              service:
+                name: rosetta-service
+                port:
+                  name: rosetta-port
+          - path: /api/v1/spec
+            pathType: Prefix
+            backend:
+              service:
+                name: rosetta-service
+                port:
+                  name: rosetta-port
+          - path: /swagger-ui/index.html/(.*)
+            pathType: Prefix
+            backend:
+              service:
+                name: rosetta-service
+                port:
+                  name: rosetta-port
           - path: /iiif/
             pathType: Prefix
             backend:
@@ -23,10 +65,10 @@ spec:
                 name: rosettav2-service
                 port:
                   name: rosettav2-port
-          - path: /proteus/transform
+          - path: /ciim/
             pathType: Prefix
             backend:
               service:
-                name: rosettav2-service
+                name: ui-service
                 port:
-                  name: rosettav2-port
+                  name: ui-port
