fixed es search

--- a/kubernetes/rosetta/ingress_ciim.yml
+++ b/kubernetes/rosetta/ingress_ciim.yml
@@ -72,3 +72,10 @@ spec:
                 name: ui-service
                 port:
                   name: ui-port
+          - path: /proteus/transform
+            pathType: Prefix
+            backend:
+              service:
+                name: ui-service
+                port:
+                  name: ui-port
