added zooms config

--- a/kubernetes/ciim/properties/app_ctx_transient.properties
+++ b/kubernetes/ciim/properties/app_ctx_transient.properties
@@ -25,7 +25,7 @@ elasticsearch.cluster=ciim-internal
 elasticsearch.client.host=ciim-internal-es-http.etna
 
 media.process.files=true
-media.zoom.processing.enabled=false
+media.zoom.processing.enabled=true
 media.ciim.dir=/ciim/ciim-media
 media.processing.timeout=180000
 media.filesystem.usage.limit=90
