Added missing secret

--- a/kubernetes/ohos/ciim/ciim-secrets.yml
+++ b/kubernetes/ohos/ciim/ciim-secrets.yml
@@ -34,3 +34,12 @@ metadata:
 type: Opaque
 data:
   publication.es.clean.auth.password: V2tKWldWZ3hPREJFT1Zac1FVazBObXcyVlhNeE9HazM=
+---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: ciim-encryption-key
+  namespace: tna-ohos
+type: Opaque
+data:
+  ciim.encryption_key: YzFCTGMxSnhOMjVLWmxKR01sSktkV2RJU0hoaFIwVT0=
