Updated DB / secrets

--- a/kubernetes/ohos/ciim/ciim-secrets.yml
+++ b/kubernetes/ohos/ciim/ciim-secrets.yml
@@ -5,8 +5,8 @@ metadata:
   namespace: tna-ohos
 type: Opaque
 data:
-  ciim.db.username: Y2lpbQ==
-  ciim.db.password: SnoyMlVmOFM5NWg5
+  ciim.db.password: alRoMzM5JXc9MyQ=
+  ciim.db.username: YWRtaW4=
 ---
 apiVersion: v1
 kind: Secret
@@ -15,7 +15,7 @@ metadata:
   namespace: tna-ohos
 type: Opaque
 data:
-  elasticsearch.auth.password: UWs5NU1HWnBOVGN4TlcxTU0xaFpVelF4TldWSk5XWnk=
+  elasticsearch.auth.password: ZFRGbE5uY3lNVzFvTWt3elJqVTNNVkZNTUV4VWRVaGg=
 ---
 apiVersion: v1
 kind: Secret
@@ -24,7 +24,7 @@ metadata:
   namespace: tna-ohos
 type: Opaque
 data:
-  publication.es.auth.password: U214UVdEZzVWakpXWm14TmNEWXhTVVEzT0RnMU9WcDM=
+  publication.es.auth.password: WnpFNU5ERTFSMWRsWkVwak1WcGlkalIzT0Rkd2R6Vkw=
 ---
 apiVersion: v1
 kind: Secret
@@ -33,7 +33,7 @@ metadata:
   namespace: tna-ohos
 type: Opaque
 data:
-  publication.es.clean.auth.password: V2tKWldWZ3hPREJFT1Zac1FVazBObXcyVlhNeE9HazM=
+  publication.es.clean.auth.password: VURBMFJ6UTNiRzlxZDNaM2F6Y3lhMk0xZERnMFNsYzM=
 ---
 apiVersion: v1
 kind: Secret
