--- a/kubernetes/ohos/ciim/properties/app_ctx_transient.properties
+++ b/kubernetes/ohos/ciim/properties/app_ctx_transient.properties
@@ -5,7 +5,7 @@ ciim.data.dir=/ciim
 
 # CIIM DB PROPERTIES
 
-ciim.db.url=jdbc:mysql://db-service.tna-ohos/ciim-tna-ohos?autoReconnect=true&allowPublicKeyRetrieval=true&useSSL=false
+ciim.db.url=jdbc:mysql://ciim-db-service.etna/ciim_ohos?autoReconnect=true&allowPublicKeyRetrieval=true&useSSL=false
 
 ciim.db.dialect=org.hibernate.dialect.MySQL8Dialect
 
@@ -13,14 +13,13 @@ ciim.db.driver=com.mysql.cj.jdbc.Driver
 
 ciim.db.poolSize=25
 
-
 # CIIM VAULT DB PROPERTIES
 
-ciim.vault.db.url=jdbc:mysql://db-service.tna-ohos/ciim_vault-tna-ohos?autoReconnect=true&allowPublicKeyRetrieval=true&useSSL=false
+ciim.vault.db.url=jdbc:mysql://ciim-db-service.etna/ciim_vault_ohos?autoReconnect=true&allowPublicKeyRetrieval=true&useSSL=false
 
 ciim.vault.db.username=ciim
 
-ciim.vault.db.password=Jz22Uf8S95h9
+ciim.vault.db.password=xxxx
 
 ciim.vault.db.dialect=org.hibernate.dialect.MySQL8Dialect
 
