Updated DB / secrets

--- a/kubernetes/ohos/ciim-ui/properties/application.yml
+++ b/kubernetes/ohos/ciim-ui/properties/application.yml
@@ -13,18 +13,18 @@ es:
       protocol: http
       pathPrefix:
       username: elastic
-      password: BOy0fi5715mL3XYS415eI5fr
+      password: u1e6w21mh2L3F571QL0LTuHa
       mediaBase: http://a7ce4aa36e9014534b4c186de028f4bb-1ba48b34b99d2f48.elb.eu-west-2.amazonaws.com/tna/api//tna/api/secure/ui/media/
       indices:
         - ciim
         - management
         - unavailable
 dataSource:
-  url: jdbc:mysql://db-service.tna-ohos/ciim_mgmt-tna-ohos?zeroDateTimeBehavior=convertToNull&autoReconnect=true&characterEncoding=utf8&maxReconnects=10&initialTimeout=10&allowPublicKeyRetrieval=true&useSSL=false
+  url: jdbc:mysql://ciim-db-service.etna/ciim_mgmt_ohos?zeroDateTimeBehavior=convertToNull&autoReconnect=true&characterEncoding=utf8&maxReconnects=10&initialTimeout=10&allowPublicKeyRetrieval=true&useSSL=false
   dialect: org.hibernate.dialect.MySQL8Dialect
   driverClassName: com.mysql.cj.jdbc.Driver
-  username: ciim
-  password: Jz22Uf8S95h9
+  username: admin
+  password: jTh339%w=3$
   dbCreate: update
 template:
   create:
