--- a/kubernetes/overlays/staging/kustomization.yaml
+++ b/kubernetes/overlays/staging/kustomization.yaml
@@ -17,6 +17,7 @@ bases:
   - ../../ohos/public-es
   - ../../ohos/ciim-ui
   - ../../ohos/public-clean-es
+  - ../../ohos/rosetta-3
 commonAnnotations:
   environment: dev
 patchesStrategicMerge:
