--- a/kubernetes/ohos/rosetta-3/config/application.yml
+++ b/kubernetes/ohos/rosetta-3/config/application.yml
@@ -30,7 +30,7 @@ rosetta:
       - name: ciim/search
         paths:
           - /rosetta-3/ciim/search
-        profile: elasticsearchEtna
+        profile: elasticsearch
         type: advanced-cache-multi
         transforms:
           request:
