--- a/kubernetes/ohos/rosetta-3/config/application.yml
+++ b/kubernetes/ohos/rosetta-3/config/application.yml
@@ -46,6 +46,7 @@ rosetta:
             policy: list
             names:
               - ciim/search/response
+              - aggs-count-to-doc-count
 
       - name: ciim/get
         paths:
