--- a/kubernetes/ohos/rosetta-3/config/application.yml
+++ b/kubernetes/ohos/rosetta-3/config/application.yml
@@ -51,7 +51,7 @@ rosetta:
       - name: ciim/get
         paths:
           - /rosetta-3/ciim/get
-        profile: generic-search
+        profile: elasticsearch
         transforms:
           request:
             policy: list
