--- a/kubernetes/ohos/rosetta-3/config/application.yml
+++ b/kubernetes/ohos/rosetta-3/config/application.yml
@@ -51,11 +51,12 @@ rosetta:
       - name: ciim/get
         paths:
           - /rosetta-3/ciim/get
-        profile: elasticsearch
+        profile: generic-search
         transforms:
           request:
             policy: list
             names:
+              - generic-to-elastic
               - ciim/get/request
           response:
             policy: list
