--- a/kubernetes/ohos/rosetta-3/config/application.yml
+++ b/kubernetes/ohos/rosetta-3/config/application.yml
@@ -56,6 +56,7 @@ rosetta:
           request:
             policy: list
             names:
+              - to-generic-search
               - generic-to-elastic
               - ciim/get/request
           response:
