--- a/kubernetes/ohos/rosetta-3/config/application.yml
+++ b/kubernetes/ohos/rosetta-3/config/application.yml
@@ -37,6 +37,7 @@ rosetta:
             policy: list
             names:
               - to-generic-search
+              - generic-search-defaults
               - generic-search-modifications
               - generic-to-elastic
               - elastic-modifications
