Moved rosetta 3 to replace old rosetta

--- a/kubernetes/ohos/ingress/ingress.yml
+++ b/kubernetes/ohos/ingress/ingress.yml
@@ -14,7 +14,7 @@ spec:
             pathType: Prefix
             backend:
               service:
-                name: rosetta-service
+                name: rosetta-3-service
                 port:
                   name: rosetta-port
           - path: /tna/api/
