--- a/kubernetes/ohos/rosetta-3/config/application.yml
+++ b/kubernetes/ohos/rosetta-3/config/application.yml
@@ -29,7 +29,7 @@ rosetta:
     views:
       - name: ciim/search
         paths:
-          - /rosetta-3/ciim/search
+          - /rosetta/data/search
         profile: elasticsearch
         type: advanced-cache-multi
         transforms:
@@ -50,7 +50,7 @@ rosetta:
 
       - name: ciim/get
         paths:
-          - /rosetta-3/ciim/get
+          - /rosetta/data/get
         profile: generic-search
         transforms:
           request:
@@ -140,25 +140,25 @@ rosetta:
             - name: group
               size: 50
 
-      - name: data/search/request
+      - name: ciim/search/request
         type: proteus
         properties:
           mutable: true
           spec: ${base_paths.proteus}/ciim_search_request.json
 
-      - name: data/search/response
+      - name: ciim/search/response
         type: proteus
         properties:
           mutable: true
           spec: ${base_paths.proteus}/ciim_search_response.json
 
-      - name: data/get/request
+      - name: ciim/get/request
         type: proteus
         properties:
           mutable: true
           spec: ${base_paths.proteus}/ciim_get_request.json
 
-      - name: data/get/response
+      - name: ciim/get/response
         type: proteus
         properties:
           mutable: true
