--- a/kubernetes/ohos/rosetta-3/config/application.yml
+++ b/kubernetes/ohos/rosetta-3/config/application.yml
@@ -132,7 +132,21 @@ rosetta:
               format: "yyyy"
               date_ranges:
                 - from: "0100"
-                  to: "3000"
+                  to: "1500"
+                - from: "1501"
+                  to: "1600"
+                - from: "1601"
+                  to: "1700"
+                - from: "1701"
+                  to: "1800"
+                - from: "1801"
+                  to: "1850"
+                - from: "1851"
+                  to: "1900"
+                - from: "1951"
+                  to: "2000"
+                - from: "2001"
+                  to: "2050"
           path_config:
             paths:
               datatype: "@datatype.base"
